--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ small {
   padding: 60px 0 20px;
 }
 .footer p {
-  color: #8a8a8a;
+  color: white;
 }
 footer h3 {
   color: #fff;
@@ -240,9 +240,11 @@ footer h3 {
 .footer-col-1 {
   flex-basis: 30%;
 }
-.footer-col-2 {
+.footer-col-2 h1 {
   flex: 1;
   text-align: center;
+  color: white;
+
 }
 .footer-col-2 img {
   width: 180px;
@@ -390,7 +392,7 @@ select:focus {
   margin-top: 80px;
 }
 .col-2 a {
-  background-color: lightslategray;
+  background-color: black;
   color: white;
   padding: 3px 15px;
   text-decoration: none;
